добавил отдачу количества устройств в списке цен
